GitHub add novas bibliotecas